Sutter Health/src/objects/Site_Metric_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings used for import Google Analytics data for a Force.com Site</description>
    <fields>
        <fullName>ContentTypeValue__c</fullName>
        <label>ContentTypeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email username for Google Analytics</description>
        <inlineHelpText>Email username for Google Analytics</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndPointValue__c</fullName>
        <label>EndPointValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for Google Analytics account</description>
        <inlineHelpText>Password for Google Analytics account</inlineHelpText>
        <label>Password</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_key1__c</fullName>
        <label>Private key1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_key2__c</fullName>
        <label>Private key2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_key3__c</fullName>
        <label>Private key3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSA_Value__c</fullName>
        <label>RSA Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Table_Id__c</fullName>
        <description>Google Table Id for Site, ie. ga:123456</description>
        <inlineHelpText>Google Table Id for Site, ie. ga:123456</inlineHelpText>
        <label>Table Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Track Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Sessions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Track Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracking Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracking Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>claim_set_aud__c</fullName>
        <label>claim_set_aud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>claim_set_exp__c</fullName>
        <label>claim_set_exp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>claim_set_iat__c</fullName>
        <label>claim_set_iat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>claim_set_iss__c</fullName>
        <label>claim_set_iss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>claim_set_scope__c</fullName>
        <label>claim_set_scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_typeValue__c</fullName>
        <label>grant_typeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site Metric Settings</label>
</CustomObject>